chore(HomeHeroCard.scss): improve semantics by changing overflow-y to overflow hidden chore(HomeHeroCard.scss): add position and z-index to .home-hero-card__cta-details for proper stacking chore(HomeHeroCard.scss): adjust positioning and dimensions of .home-hero-card__img for better display chore(Header.scss): adjust top positioning of .header__nav-wrapper for better alignment chore(Header.scss): adjust z-index and add overflow hidden to .header__nav-wrapper for proper stacking and scrolling chore(_base.scss): add min-width to body to ensure a minimum width for the page layout

--- a/src/components/cards/HomeHeroCard.scss
+++ b/src/components/cards/HomeHeroCard.scss
@@ -5,9 +5,11 @@
   background-position-y: 10rem;
   background-repeat: no-repeat;
   padding: 8rem 2.4rem 45rem;
-  overflow-y: hidden;
+  overflow: hidden;
 
   &__cta-details {
+    position: relative;
+    z-index: 1;
 
 
     & .home-hero-card__title {
@@ -25,11 +27,16 @@
 
   &__img {
     position: absolute;
-    display: inline-block;
+    display: block;
     left: 50%;
-    bottom: -10rem;
+    bottom: -37rem;
     transform: translateX(-50%); // display: block;
     overflow: scroll;
-    width: 28.4rem;
+    max-inline-size: none;
+    max-block-size: none;
+
+    width: 62rem;
+    height: auto;
+    z-index: 0;
   }
 }
