--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -31,13 +31,14 @@
 
   &__nav-wrapper {
     position: absolute;
-    top: 10.5rem;
+    top: 10.4rem;
     // bottom: -7.8rem;
     right: 0rem;
     background-color: rgb(0, 0, 0, 0.5);
     width: 100%;
     height: 100vh;
-    z-index: -5;
+    z-index: 2;
+    overflow: hidden;
     // padding: ;
   }
 }
