--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -29,6 +29,7 @@ body {
 
   display: flex;
   flex-direction: column;
+  min-width: 37.5rem;
   height: 100vh;
 
   // min-width: 100vw;
